# extract-chrome-cookies

./: Cargo.toml  LICENSE  README.md  build  build.rs
.github/workflows/: release.yml  rust.yml
release/: extract-chrome-cookies
scripts/: build  install  uninstall
src/: cli.rs  main.rs
