[package]
name = "extract-chrome-cookies"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.27.0"
rust-crypto = "0.2.36"
clap = "3.1.18"
home = "0.5.3"
colored = "2"
url = "2.2.2"
tldextract = "0.5.1"

[target.'cfg(target_os = "macos")'.dependencies]
keytar = "0.1.6"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3.9"

[build-dependencies]
clap = "3.1.18"
clap_complete = "3.2.1"
